--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>AFeng · 技术探索者</title>
-    <!-- 引入科技风字体 -->
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -14,7 +13,7 @@
             -webkit-tap-highlight-color: transparent;
             font-family: 'Segoe UI', Roboto, 'Microsoft YaHei', sans-serif;
         }
-        /* 科技风背景：渐变+网格纹理+动态光效 */
+        /* 移除overflow: hidden，修复滑动问题，保留所有科技风背景 */
         body {
             background: linear-gradient(135deg, #121629, #1a1f38);
             min-height: 100vh;
@@ -24,9 +23,8 @@
             justify-content: center;
             color: #e0e0e0;
             text-align: center;
-            padding: 20px;
+            padding: 30px 20px;
             position: relative;
-            overflow: hidden;
         }
         body::before {
             content: '';
@@ -37,6 +35,7 @@
             height: 100%;
             background: repeating-linear-gradient(0deg, rgba(255,255,255,0.03) 0px, rgba(255,255,255,0.03) 1px, transparent 1px, transparent 20px);
             z-index: -2;
+            pointer-events: none;
         }
         body::after {
             content: '';
@@ -49,6 +48,7 @@
                         radial-gradient(circle at 80% 20%, rgba(66, 133, 244, 0.15), transparent 60%);
             animation: lightMove 15s infinite linear;
             z-index: -2;
+            pointer-events: none;
         }
         /* 玻璃拟态科技感卡片 */
         .profile-card {
@@ -147,7 +147,7 @@
             font-size: 15px;
         }
         /* 按钮图标居左，文字居中 */
-        .link-btn i, .link-btn span:first-child {
+        .link-btn i {
             margin-right: 10px;
             color: #e63946;
             font-size: 18px;
@@ -188,7 +188,7 @@
             0% {left: -100%;}
             100% {left: 100%;}
         }
-        /* 移动端适配 */
+        /* 移动端适配，优化内边距保证滑动舒适 */
         @media (max-width: 480px) {
             .profile-card {
                 padding: 40px 25px;
@@ -204,6 +204,9 @@
             .link-btn {
                 padding: 14px;
                 font-size: 14px;
+            }
+            body {
+                padding: 40px 15px;
             }
         }
     </style>
